2000-07-10  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_DIRNAME): Use an `expr' solution instead of
	echo|sed.
	From Paul Eggert.
	* doc/autoconf.texi (Limitations of Usual Tools): Include the
	words from Paul about `|' with expr(1).

2000-07-10  Akim Demaille  <akim@epita.fr>

	* aclang.m4: Promote s,,, over s%%%, and `sed prog' over `sed -e
	prog'.
	* acgeneral.m4: Likewise.
	* acspecific.m4: Likewise.
	* doc/autoconf.texi (Limitations of Usual Tools, Coding Style):
	Likewise.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* autoconf.sh: When using `mktemp -d', be sure that the directory
	was created.
	* autoheader.sh: Likewise.
	* autoreconf.sh: Likewise.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* AUTHORS: Update.
	* doc/autoconf.texi: Free Franc,ois Pinard from iftex and ifinfo,
	use @,c.
	Don't use `@code{m4}' when you mean M4, just as you shall not say
	`@code{cc}' when you refer to the C language.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_LANG(C), AC_LANG(C++), AC_LANG(Fortran 77)): Set
	ac_gnu_compiler.
	(_AC_PROG_CC_GNU, _AC_PROG_CXX_GNU, _AC_PROG_F77_GNU): Compute
	ac_gnu_compiler.
	* acgeneral.m4 (AC_LINKER_OPTION): Adjust.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* aclang.m4 (AC_PROG_CC, AC_PROG_CXX, AC_PROG_F77): Move the code
	processing the result of AC_PROG_CC_G, AC_PROG_CXX_G, and
	AC_PROG_F77_G into them.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Multiple Cases, Quotation Rule Of Thumb):
	Follow the coding style.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Obsoleting Macros): Is not a subsection of
	`Dependencies Between Macros', but rather a section of `Writing
	Macros'.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Coding Style): New node.

2000-07-07  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_SHELL_MKDIR_P): s/ac_dir/ac_mkdir_dir/ to avoid
	clashes with the numerous ac_dir loops.
	Reported by Lars J. Aas.
